# binaryen-pass-example

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  binaryen.cmake  main.cpp
example/: add.wast
